webiste-and-web-app/gke-tls-lab/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    type: endpoints-app
spec:
  rules:
  - host: api.endpoints.qwiklabs-gcp-01-0d50e5090db0.cloud.goog
    http:
      paths:
      - backend:
          serviceName: esp-srv
          servicePort: 80
